# OZ

Pyhton/1/: Python1.ipynb  문제1.ipynb  문제2.ipynb  문제3.ipynb
Pyhton/2/: python2.ipynb
Study/1week/: config.yaml  db.py
Study/1week/oz_study_ assignment/: pyproject.toml
Study/1week/oz_study_ assignment/deploy/local/: docker-compose.yaml
Study/1week/oz_study_ assignment/deploy/local/conf.d/: my.cnf
Study/1week/oz_study_ assignment/five/: main.py
Study/1week/oz_study_ assignment/five/conf/: alchemy_db.py
Study/3week/: config.py  db_connect.py  ddl_script.py  excel_file.py  main.py  schema_table_info.py  table_view_info.py
Study/3week/temp/: main.py  main2.py
